# flatty

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md  TODO.md
.github/workflows/: test.yml
base/: Cargo.toml
base/src/: array.rs  base.rs  cast.rs  default.rs  emplacer.rs  error.rs  flat.rs  init.rs  iter.rs  lib.rs  marker.rs  maybe_unsized.rs  mem.rs  prim.rs  primitive.rs  sized.rs  traits.rs  vec.rs  wrap.rs
base/src/utils/: alloc.rs  check.rs  iter.rs  mem.rs  mod.rs
channel/: Cargo.toml
channel/src/: lib.rs  read.rs  tests.rs  write.rs
channel/src/reader/: async_.rs  blocking.rs  common.rs  mod.rs
channel/src/tests/: async_.rs  blocking.rs  mod.rs
channel/src/writer/: async_.rs  blocking.rs  common.rs  mod.rs
containers/: Cargo.toml
containers/src/: flex.rs  lib.rs  string.rs  vec.rs  wrap.rs
flatty/: Cargo.toml
flatty-base/: Cargo.toml
flatty-base/src/: array.rs  base.rs  cast.rs  default.rs  error.rs  len.rs  lib.rs  marker.rs  prim.rs  sized.rs  traits.rs  util.rs  utils.rs  vec.rs
flatty-base/src/collections/: array.rs  mod.rs  vec.rs
flatty-base/src/portable/: float.rs  int.rs  mod.rs
flatty-base/src/tests/: mod.rs  unsized_enum.rs  unsized_struct.rs
flatty-macros/: Cargo.toml
flatty-macros/src/: base.rs  generic.rs  lib.rs  make_flat.rs  portable.rs  sized.rs  unsized_enum.rs  unsized_struct.rs  utils.rs
flatty-macros/src/parts/: align_as.rs  attrs.rs  bounds.rs  enum_.rs  init.rs  layout.rs  mod.rs  validate.rs
flatty-macros/src/parts/attrs/: default.rs  make_flat.rs  mod.rs  repr.rs
flatty-macros/src/utils/: mod.rs
flatty-tests/: Cargo.toml
flatty-tests/src/: generics.rs  lib.rs  portable.rs  sized_enum.rs  sized_struct.rs  unsized_enum.rs  unsized_sized_enum.rs  unsized_struct.rs
flatty/src/: base.rs  len.rs  lib.rs  prim.rs  sized.rs  unsized_enum.rs  util.rs  vec.rs
flatty/src/tests/: mod.rs  sized.rs  sized_struct.rs  unsized_enum.rs  unsized_struct.rs
io/: Cargo.toml
io/src/: lib.rs
io/src/async_/: io.rs  mod.rs  recv.rs  send.rs
io/src/async_/shared/: recv.rs  send.rs
io/src/blocking/: io.rs  mod.rs  recv.rs  send.rs
io/src/blocking/shared/: mod.rs  recv.rs  send.rs
io/src/common/: buffer.rs  error.rs  io.rs  mod.rs  recv.rs  send.rs
io/src/common/shared/: endpoint.rs  mod.rs
io/src/reader/: async_.rs  blocking.rs  buffer.rs  common.rs  endpoint.rs  mod.rs
io/src/recv/: async_.rs  blocking.rs  buffer.rs  common.rs  endpoint.rs
io/src/send/: async_.rs  blocking.rs  common.rs  mod.rs
io/src/tests/: async_.rs  blocking.rs  common.rs  mod.rs
io/src/writer/: async_.rs  blocking.rs  common.rs
macros/: Cargo.toml
macros.old/src/: unsized_struct.rs
macros.old/src/parts/: dyn_.rs  enum_.rs  init.rs  layout.rs
macros.old/src/parts/attrs/: mod.rs
macros/src/: context.rs  info.rs  lib.rs  sized.rs  unsized_enum.rs
macros/src/impl_/: align_as.rs  base.rs  cast.rs  default.rs  flat.rs  maybe_unsized.rs  mod.rs  portable.rs  self_.rs  tag.rs  unsized_enum.rs
macros/src/items/: align_as.rs  base.rs  cast.rs  default.rs  emplacer.rs  enum_.rs  flat.rs  init.rs  maybe_unsized.rs  mod.rs  portable.rs  self_.rs  tag.rs  unsized_.rs  unsized_enum.rs
macros/src/parts/: align_as.rs  generic.rs  match_.rs
macros/src/parts/attrs/: default.rs  derive.rs
macros/src/utils/: field_iter.rs  generic.rs  match_.rs  mod.rs  path.rs
portable/: Cargo.toml
portable/src/: bool_.rs  float.rs  impl_.rs  int.rs  lib.rs  tests.rs
src/: lib.rs  prim.rs  size.rs  vec.rs
tests/: Cargo.toml
tests/src/: c_like_enum.rs  generics.rs  lib.rs  not_default.rs  portable.rs  sized_enum.rs  sized_struct.rs  unsized_enum.rs  unsized_sized_enum.rs  unsized_struct.rs
tests/src/sized_enum/: auto.rs  manual.rs  tests.rs
tests/src/sized_struct/: auto.rs  manual.rs  mod.rs  tests.rs
tests/src/unsized_enum/: auto.rs  manual.rs  tests.rs
tests/src/unsized_struct/: auto.rs  manual.rs  mod.rs  tests.rs
