[workspace.package]
version = "0.1.0-alpha.3"
edition = "2021"
rust-version = "1.64"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
repository = "https://github.com/agerasev/flatty.git"
license = "MIT/Apache-2.0"

[workspace.dependencies]
flatty-macros = { path = "macros", version = "0.1.0-alpha.3" }
flatty-base = { path = "base", version = "0.1.0-alpha.3", default-features = false }
flatty-portable = { path = "portable", version = "0.1.0-alpha.3", default-features = false }
flatty = { path = ".", version = "0.1.0-alpha.3", default-features = false }

[package]
name = "flatty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Flat message buffers"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/flatty"
homepage = "https://github.com/agerasev/flatty"

[features]
default = ["std"]
std = ["flatty-base/std"]

[dependencies]
flatty-macros = { workspace = true }
flatty-base = { workspace = true }
flatty-portable = { workspace = true }

[workspace]
members = ["io", "tests"]
