[workspace.package]
version = "0.1.0-rc.5"
edition = "2021"
rust-version = "1.69"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
homepage = "https://gitlab.com/agerasev/flatty"
repository = "https://gitlab.com/agerasev/flatty.git"
license = "MIT/Apache-2.0"
readme = "README.md"

[workspace.dependencies]
flatty-macros = { path = "macros", version = "0.1.0-rc.5" }
flatty-base = { path = "base", version = "0.1.0-rc.5", default-features = false }
flatty-portable = { path = "portable", version = "0.1.0-rc.5", default-features = false }
flatty-containers = { path = "containers", version = "0.1.0-rc.5", default-features = false }
flatty = { path = ".", version = "0.1.0-rc.5", default-features = false }

[package]
name = "flatty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Flat message buffers"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
documentation = "https://docs.rs/flatty"

[features]
default = ["std"]
std = ["alloc", "flatty-containers/std"]
alloc = ["flatty-containers/alloc"]
serde = ["flatty-portable/serde"]

[dependencies]
flatty-macros = { workspace = true }
flatty-base = { workspace = true }
flatty-portable = { workspace = true }
flatty-containers = { workspace = true }

[workspace]
members = ["io", "tests"]
