[package]
name = "flatty-base"
version = "0.1.0-alpha.1"
edition = "2021"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Flatty traits and primitives"
repository = "https://github.com/agerasev/flatty.git"
license = "MIT/Apache-2.0"

[features]
default = ["std"]
std = ["stavec/std"]

[dependencies]
stavec = { git = "https://github.com/agerasev/stavec.git", branch = "generic", default-features = false, features = ["repr-c"] }
