[package]
name = "flatty-base"
version.workspace = true
edition.workspace = true

description = "Flatty traits and primitives"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["stavec/std"]

[dependencies.stavec]
version = "0.2.0"
default-features = false
features = ["repr-c"]
