[package]
name = "flatty-channel"
version = "0.1.0"
edition.workspace = true
resolver = "2"

description = "Channels for sending flat messages"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
flatty.workspace = true
futures = "0.3.25"

[dev-dependencies]
async-ringbuf = "0.1.0"
