[package]
name = "flatty-base"
version = "0.1.0-alpha.0"
edition = "2021"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Flatty traits and primitives"
repository = "https://github.com/agerasev/flatty.git"
license = "MIT/Apache-2.0"

[dependencies]
num-traits = { version = "0.2", default-features = false }
