[package]
name = "flatty"
version = "0.1.0-alpha.1"
edition = "2021"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
description = "Flatty traits and primitives"
repository = "https://github.com/agerasev/flatty.git"
license = "MIT/Apache-2.0"

readme = "../README.md"
documentation = "https://docs.rs/flatty"
homepage = "https://github.com/agerasev/flatty"

[features]
default = ["std"]
std = ["base/std"]

[dependencies]
base = { package = "flatty-base", path = "../base", version = "0.1.0-alpha.1", default-features = false }
portable = { package = "flatty-portable", path = "../portable", version = "0.1.0-alpha.1", default-features = false }
macros = { package = "flatty-macros", path = "../macros", version = "0.1.0-alpha.1" }
