[package]
name = "flatty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Flat types"
authors.workspace = true
repository.workspace = true
license.workspace = true

readme = "../README.md"
documentation = "https://docs.rs/flatty"
homepage = "https://github.com/agerasev/flatty"

[features]
default = ["std"]
std = ["base/std"]

[dependencies]
macros = { package = "flatty-macros", path = "../macros" }
base = { package = "flatty-base", path = "../base", default-features = false }
portable = { package = "flatty-portable", path = "../portable", default-features = false }
