[package]
name = "flatty-io"
version = "0.1.0-rc.1"
edition.workspace = true

description = "Flat message transfer"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["async"]
async = ["futures"]
test_shared = []

[dependencies]
flatty = { workspace = true, features = ["std"] }
futures = { version = "0.3.25", optional = true }
owning_ref = "0.4.1"

[dev-dependencies]
pipe = "0.4.0"
async-ringbuf = "0.2.0-rc.0"
ringbuf = "0.4.0-rc.0"
