[package]
name = "flatty-io"
version = "0.1.0-rc.2"
edition.workspace = true

description = "Flat message transfer"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["blocking", "io"]
async = ["futures"]
blocking = []
shared = []
io = ["std"]
std = []

[dependencies]
flatty = { workspace = true, features = ["std"] }
futures = { version = "0.3.25", optional = true }
owning_ref = "0.4.1"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-ringbuf = "0.2.0-rc.3"
ringbuf-blocking = "0.1.0-rc.1"
