[package]
name = "flatty-io"
version = "0.1.0-rc.6"
edition.workspace = true

description = "Flat message transfer"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["async", "blocking", "io"]
async = ["futures"]
blocking = []
io = ["std"]
std = ["flatty/std"]

[dependencies]
flatty = { workspace = true, default-features = false }
futures = { version = "0.3.25", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-ringbuf = "0.2.0-rc.4"
ringbuf-blocking = "0.1.0-rc.2"
