[package]
name = "flatty-macros"
version.workspace = true
edition.workspace = true

description = "Flatty procedural macros"
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"
