[package]
name = "flatty-portable"
version.workspace = true
edition.workspace = true

description = "Flatty portable trait and primitives"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["flatty-base/std", "num-traits/std"]
serde = ["dep:serde"]

[dependencies]
flatty-base.workspace = true
num-traits = { version = "0.2", default-features = false }
serde = { version = "1.0", optional = true }
