[package]
name = "flatty-portable"
version.workspace = true
edition.workspace = true

description = "Flatty portable trait and primitives"
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
flatty-base.workspace = true
num-traits = { version = "0.2", default-features = false }
flatty-containers.workspace = true
serde = { version = "1.0", optional = true }
